syntax = "proto3";
package lum.network.epochs;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lum/network/epochs/genesis.proto";

option go_package = "github.com/lum-network/chain/x/epochs/types";

// Query defines the gRPC querier service.
service Query {
  // EpochInfos provide running epochInfos
  rpc EpochInfos(QueryEpochsInfoRequest) returns (QueryEpochsInfoResponse) {
    option (google.api.http).get = "/lum-network/epochs";
  }
  // CurrentEpoch provide current epoch of specified identifier
  rpc CurrentEpoch(QueryCurrentEpochRequest)
      returns (QueryCurrentEpochResponse) {
    option (google.api.http).get = "/lum-network/epochs/current_epoch";
  }
  // CurrentEpoch provide current epoch of specified identifier
  rpc EpochInfo(QueryEpochInfoRequest) returns (QueryEpochInfoResponse) {
    option (google.api.http).get = "/lum-network/epochs/epoch_info";
  }
}

message QueryEpochsInfoRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryEpochsInfoResponse {
  repeated EpochInfo epochs = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryCurrentEpochRequest { string identifier = 1; }
message QueryCurrentEpochResponse { int64 current_epoch = 1; }

message QueryEpochInfoRequest { string identifier = 1; }
message QueryEpochInfoResponse {
  EpochInfo epoch = 1 [ (gogoproto.nullable) = false ];
}
